public/stylesheets/edit.css
html{
    overscroll-behavior: none;
}

body{
    overflow: hidden;
}

body[data-movingnode="true"] .node, body[data-movingnode="true"] .backgroundImage{
    cursor: move !important;
}

body[data-movingnode="true"] .backgroundImage{
    z-index: 50;
}

main{
    padding-top: 0;
    overscroll-behavior: none;
    overflow: hidden;
}

#creationCanvas{
    background-color: #f5f5f5;
    cursor: crosshair;
    width : 100%;
    height: 100%;
}

#nodes{
    position: fixed;
    top: 0;
    left: 0;
    width: 0%;
    height: 0%;
    cursor: crosshair;
}

img.backgroundImage, img.overlayImage{
    position: fixed;
}

#nodes .node{
    position: fixed;
    cursor: pointer;
    box-sizing: border-box;
    border: dashed rgba(0, 0, 0, 0.4);
}

#nodes .node.ellipse{
    border-radius: 100%;
}

#nodes .node[data-selected="true"]{
    border: 3px solid #689fe2;
    z-index: 1000;
}

#configurePanel{
    position: fixed;
    left: 100%;
    top: 0;
    width: 400px;
    height: 100%;
    background: #333;
    box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.6);
    padding: 1em;
    box-sizing: border-box;
    overflow: scroll;
    transition: transform 0.25s ease-in-out;
    transform: translateX(10%);
    z-index: 10;
    color: white;
    border: 1px solid white;
    border-top: 0px;
    border-bottom: 0px;
}

#configurePanel[data-active="true"]{
    transform: translateX(-100%);
}

#configurePanel #closePanelBtn{
    position: absolute;
    right: 1em;
    top: 1em;
    font-size: 1em;
    width: 1.5em;
    height: 1.5em;
    background: #d8d8d8;
    display: flex;
    text-align: center;
    justify-content: center;
    align-content: center;
    align-items: center;
    border-radius: 100%;
    cursor: pointer;
    background-image: url('/images/closeBtnIcon.png');
    background-size: 50%;
    background-position: 50%;
    background-repeat: no-repeat;
}

#configurePanel #closePanelBtn:hover{
    background-color: #9e9e9e;
}

#configurePanel form{
    margin-top: 1em;
    display: flex;
    flex-direction: column;
}

#configurePanel form label{
    font-weight: 800;
    margin-bottom: 0.3em;
    color: white;
}

#configurePanel form input{
    margin-bottom: 1em;
    font-size: 1em;
    padding: 0.5em 0.3em;
    border-radius: 3px;
    border: 1px solid grey;
}

#configurePanel form #nodeRules #newRule{
    display: block;
    border: 1px solid rgba(255,255,255,0.5);
    background: rgba(0,0,0,0.5);
    color: white;
    padding: 1em;
    border-radius: 3px;
    outline: 0 solid transparent;
    cursor: pointer;
}

#configurePanel form #nodeRules #storedRules {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    margin-bottom: 1em;
    list-style-type: none;
}

#configurePanel form #nodeRules #storedRules .rule{
    margin-bottom: 1em;
    border-bottom: 1px solid rgba(255,255,255,0.5);
    display: flex;
    justify-content: center;
    padding-bottom: 0.5em;
}

#configurePanel form #nodeRules #storedRules .rule input[type="text"]{
    font-size: 0.8em;
}

#configurePanel form #nodeRules #storedRules .rule .deleteRuleButton{
    box-sizing: border-box;
    margin-left: 0.5em;
    border-radius: 3px;
    cursor: pointer;
    border: 1px solid rgba(255, 255, 255, 0.25);
    background-image: url('/images/deleteIcon.png');
    background-repeat: no-repeat;
    background-size: 40%;
    background-position: 50%;
    flex: 0.8;
}

#configurePanel form #nodeRules #storedRules .rule .deleteRuleButton:hover{
    background-color: #b52222;
}

#configurePanel form #nodeRules #storedRules .rule .ruleDetails{
    display: flex;
    flex-direction: column;
    flex: 5;
}

#configurePanel form #nodeRules #storedRules .rule .ruleDetails .ruleCondition, #configurePanel form #nodeRules #storedRules .rule .ruleDetails .ruleAction {
    display: flex;
    align-items: center;
    margin-bottom: 1em;
}

#configurePanel form #nodeRules #storedRules .rule .userInput{
    background: rgba(0, 0, 0, 0.47);
    color: white;
    border-width: 0 0 1px;
    border-radius: 0;
    border-color: white;
    outline: transparent;
    margin-bottom: 0;
    margin-left: 0.5em;
    margin-right: 0.5em;
    width: 100%;
    min-width: 0;
}

#configurePanel form #nodeRules #storedRules .rule .ruleCondition .userInput:last-of-type{
    margin-right: 0;   
}

#configurePanel form #nodeRules #storedRules .rule .ruleAction select{
    -webkit-appearance: none; 
    -moz-appearance: none;
    appearance: none;  
}

#configurePanel form #nodeRules #storedRules .rule .ruleAction strong{
    min-width: 100px;
}

#configurePanel form #nodeRules #storedRules .rule .ruleAction input[type="color"]{
    padding: 0;
    border: 0px solid transparent;
    margin: 0;
    min-height: 1em;
}

#toolBox{
    width: 130px;
    height: 30px;
    background: white;
    position: fixed;
    top: 0;
    left: 0;
    list-style-type: none;
    display: flex;
    box-shadow: 0 1px 2px black;
    border-radius: 5px;
    margin: 0;
    padding: 0;
    background-color: #dcdcdc;
    top: 8vh;
    left: 50%;
    margin-left: -50px;
    overflow: hidden;
}

#toolBox li{
    background-size: 60%;
    background-position: 50%;
    flex-grow: 1;
    background-repeat: no-repeat;
    border-right: 1px solid #bdbdbd;
    padding: 0;
    margin: 0;
    height: 100%;
    cursor: pointer;
}

#toolBox li:last-of-type{
    border-right: 0px solid transparent;
}

#toolBox li[data-selected="true"]{
    background-color: white;
}

#toolBox #squareCreationTool{
    background-image: url('/images/squareCreationTool.png');
}

#toolBox #ellipseCreationTool{
    background-image: url('/images/ellipseCreationTool.png');
}

#toolBox #selectionTool{
    background-image: url('/images/selectionTool.png');
}

#toolBox #moveTool{
    background-image: url('/images/moveTool.png');
}

#toolBox #imageTool{
    background-image: url('/images/imageTool.png');
}

#colorSelect{
    position: fixed;
    bottom: 1em;
    right: 1em;
    display: flex;
    align-items: center;
    background: white;
    padding: 0.3em 0.3em;
    margin: 0;
    border-radius: 3px;
    overflow: hidden;
    box-shadow: 0 1px 2px;
}

#colorSelect p{
    margin-left: 0.5em;
}

#twinDetails{
    position: fixed;
    top: 0;
    left: 0;
    color: white;
    background: #0c3071;
    width: 100%;
    display: flex;
    align-items: center;
    padding: 0.8em 0.5em;
    box-sizing: border-box;
}

#twinDetails > *{
    margin-right: 0.5em;
}

#twinDetails span{
    font-size: 0.75em;
}

#twinDetails h3{
    font-size: 1em;
    margin-right: 1.5em;
    border-bottom: 1px solid white;
    outline: 0;
    min-width: 2em;
}

#twinDetails h3:focus{
    font-weight: 400;
}

#twinDetails a {
    font-size: 0.8em;
    color: #ffffff;
    font-weight: 800;
    text-decoration: none;
    border: 1px solid white;
    border-radius: 3px;
    padding: 0.3em 0.5em;
    box-sizing: border-box;
    margin-left: auto;
}

#backgroundImageOverlay{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.75);
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#backgroundImageOverlay[data-active="false"]{
    display: none;
}

#backgroundImageOverlay #backgroundImageOverlayActions{
    position: absolute;
    bottom: 1em;
    display: flex;
    align-self: center;
}

#backgroundImageOverlay #backgroundImageOverlayActions button{
    background: transparent;
    font-size: 1em;
    padding: 0.5em 1.5em;
    margin: 0.5em;
    border-radius: 3px;
    color: white;
    font-weight: 600;
    outline: 0;
    cursor: pointer;
    box-shadow: 0 1px 1px black;
    border: 1px solid white;
}

#backgroundImageOverlay #backgroundImageOverlayActions button[data-action="save"]:hover{
    border: 1px solid #06d806;
    background-color: green;
}

#backgroundImageOverlay #backgroundImageOverlayActions button[data-action="cancel"]:hover{
    border: 1px solid red;
    background-color: #8e0101;
}

#backgroundImageOverlay #imageDropInstructions{
    width: 400px;
    height: 300px;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 2em;
    box-sizing: border-box;
    border: 8px dashed white;
    border-radius: 3px;
    font-weight: 800;
    box-shadow: 0 1px 1px black;
    text-shadow: 0 1px 1px black;
    background: rgba(255,255,255,0.3);
    overflow: hidden;
    align-self: center;
    justify-self: center;
}

#backgroundImageOverlay[data-imageplaced="true"] #imageDropInstructions{
    display: none;
}

#backgroundImageOverlay #imagePositionAndSizer{

}

#backgroundImageOverlay[data-imageplaced="false"] #imagePositionAndSizer{
    display: none;
}

